# audit-reviewer

./: .gitignore  README.md  pyproject.toml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/services/: evaluator.py  questionnaire.py
backend/data/processed/chroma/ab0b0f6d-7cc9-474d-8df2-7818376636a7/: index_metadata.pickle
backend/scripts/: preprocess.py  search_chunks.py  verify_evaluation.py  verify_retrieval.py
backend/tests/: test_api.py  test_evaluator.py  test_preprocess.py  test_questionnaire.py
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: LoginPage.jsx  ResultsPage.jsx  UploadPage.jsx
frontend/src/test/: AuthContext.test.jsx  api.test.js  evaluateAll.test.jsx
scripts/: verify_sections.py
